--- a/templates/page-main-guest.html
+++ b/templates/page-main-guest.html
@@ -1,5 +1,5 @@
 <div class="jumbotron">
-	<h1>{{welcome}}</h1>
-	<p>Dies ist das Administrations-Interface der lokalen bwLehrpool-Installation. Bitte authentifizieren Sie sich, um Einstellungen vorzunehmen.</p>
-	<p><a  href="?do=Session&amp;action=login" class="btn btn-primary btn-lg">Anmelden &raquo;</a></p>
+	<h1>{{lang_welcome}}</h1>
+	<p>{{lang_introGuest}}</p>
+	<p><a  href="?do=Session&amp;action=login" class="btn btn-primary btn-lg">{{lang_login}} &raquo;</a></p>
 </div>
