--- a/templates/page-main.html
+++ b/templates/page-main.html
@@ -1,30 +1,30 @@
 <div class="jumbotron">
-	<h1>Willkommen, {{user}}</h1>
-	<p>Dies ist die bwLehrpool Konfigurationsoberfläche.</p>
+	<h1>{{lang_welcome}}, {{user}}</h1>
+	<p>{{lang_intro}}</p>
 </div>
 <ul class="list-group">
 {{#vmstore}}
 	<li class="list-group-item list-group-item-info">
-		Es ist noch kein Speicherort für die Virtuellen Maschinen festgelegt.
-		<a class="btn btn-sm btn-primary" href="?do=VmStore">Konfigurieren &raquo;</a>
+		{{lang_vmLocationNotSet}}
+		<a class="btn btn-sm btn-primary" href="?do=VmStore">{{lang_configure}} &raquo;</a>
 	</li>
 {{/vmstore}}
 {{#ipxe}}
 	<li class="list-group-item list-group-item-info">
-		Das Bootmenü ist veraltet oder wurde noch nicht generiert.
-		<a class="btn btn-sm btn-primary" href="?do=ServerSetup">Konfigurieren &raquo;</a>
+		{{lang_bootMenuWarning}}
+		<a class="btn btn-sm btn-primary" href="?do=ServerSetup">{{lang_configure}} &raquo;</a>
 	</li>
 {{/ipxe}}
 {{#minilinux}}
 	<li class="list-group-item list-group-item-info">
-		Wichtige Dateien der MiniLinux-Installation fehlen.
+		{{lang_minilinuxMissing}}
 		<a class="btn btn-sm btn-primary" href="?do=MiniLinux">MiniLinux &raquo;</a>
 	</li>
 {{/minilinux}}
 {{#sysconfig}}
 	<li class="list-group-item list-group-item-info">
-		Es wurde noch keine Systemkonfiguration ausgewählt.
-		<a class="btn btn-sm btn-primary" href="?do=SysConfig">Systemkonfiguration &raquo;</a>
+		{{lang_systemConfigurationNotChosen}}
+		<a class="btn btn-sm btn-primary" href="?do=SysConfig">{{lang_systemConfiguration}} &raquo;</a>
 	</li>
 {{/sysconfig}}
 </ul>
