--- a/templates/sysconfig/ad-checkconnection.html
+++ b/templates/sysconfig/ad-checkconnection.html
@@ -1,5 +1,5 @@
 <p>
-	Die Verbindung zum angegebenen AD-Server wird nun überprüft. Bitte haben Sie einen Moment Geduld.
+	{{lang_connectionWait}}
 </p>
 
 <div id="zeug">
@@ -14,7 +14,7 @@
 		<input name="binddn" value="{{binddn}}" type="hidden">
 		<input name="bindpw" value="{{bindpw}}" type="hidden">
 		<input name="home" value="{{home}}" type="hidden">
-		<button type="submit" class="btn btn-primary">&laquo; Zurück</button>
+		<button type="submit" class="btn btn-primary">&laquo; {{lang_back}}</button>
 	</form>
 </div>
 <div class="pull-right">
@@ -25,7 +25,7 @@
 		<input name="binddn" value="{{binddn}}" type="hidden">
 		<input name="bindpw" value="{{bindpw}}" type="hidden">
 		<input name="home" value="{{home}}" type="hidden">
-		<button id="nextbutton" type="submit" class="btn btn-primary">Überspringen &raquo;</button>
+		<button id="nextbutton" type="submit" class="btn btn-primary">{{lang_skip}} &raquo;</button>
 	</form>
 </div>
 <script type="text/javascript">
