--- a/templates/sysconfig/ad-finish.html
+++ b/templates/sysconfig/ad-finish.html
@@ -1,16 +1,16 @@
 <p>
-	Der AD-Proxy wird nun konfiguriert und gestartet...
+	{{lang_adStarted}}
 </p>
 
 <div id="zeug">
-	<div data-tm-id="{{tm-config}}" data-tm-log="error" data-tm-callback="ldapCb">Modul erzeugen</div>
+	<div data-tm-id="{{tm-config}}" data-tm-log="error" data-tm-callback="ldapCb">{{lang_generateModule}}</div>
 </div>
 <br>
 <div id="back" class="pull-left" style="display:none">
-	<a href="?do=SysConfig&amp;action=addmodule&amp;step=AdModule_Start" class="btn btn-primary">Assistent neustarten</a>
+	<a href="?do=SysConfig&amp;action=addmodule&amp;step=AdModule_Start" class="btn btn-primary">{{lang_restartWizard}}</a>
 </div>
 <div id="finish" class="pull-right" style="display:none">
-	<a href="?do=SysConfig" class="btn btn-primary">Zur Systemkonfiguration</a>
+	<a href="?do=SysConfig" class="btn btn-primary">{{lang_to}} {{lang_systemConfiguration}}</a>
 </div>
 <script type="text/javascript">
 function ldapCb(task)
