--- a/templates/sysconfig/ad-start.html
+++ b/templates/sysconfig/ad-start.html
@@ -55,7 +55,7 @@
 	</div>
 	<br>
 	<div class="pull-right">
-		<button type="submit" class="btn btn-primary">Weiter &raquo;</button>
+		<button type="submit" class="btn btn-primary">{{lang_next}} &raquo;</button>
 	</div>
 </form>
 
