--- a/templates/sysconfig/cfg-finish.html
+++ b/templates/sysconfig/cfg-finish.html
@@ -1,5 +1,5 @@
 <p>
-	Die Konfiguration wurde erfolgreich erstellt.
+	{{lang_configurationSuccess}}
 </p>
 
 <form role="form" method="post" action="?do=SysConfig">
@@ -7,6 +7,6 @@
 	<input type="hidden" name="action" value="config">
 	<input type="hidden" name="activate" value="{{configid}}">
 	<div class="pull-left">
-		<button type="submit" class="btn btn-primary">Konfiguration aktivieren</button>
+		<button type="submit" class="btn btn-primary">{{lang_configurationActive}}</button>
 	</div>
 </form>
