--- a/templates/sysconfig/custom-filelist.html
+++ b/templates/sysconfig/custom-filelist.html
@@ -13,4 +13,4 @@
 	</tr>
 	{{/files}}
 </table>
-<a class="btn btn-primary btn-sm" href="?do=SysConfig">Zurück &laquo;</a>
+<a class="btn btn-primary btn-sm" href="?do=SysConfig">{{lang_back}} &laquo;</a>
