--- a/templates/sysconfig/custom-fileselect.html
+++ b/templates/sysconfig/custom-fileselect.html
@@ -2,7 +2,7 @@
 	<input type="hidden" name="modid" value="{{modid}}">
 	<input type="hidden" name="token" value="{{token}}">
 	<div class="input-group">
-		<span class="input-group-addon">Modulname</span>
+		<span class="input-group-addon">{{lang_moduleName}}</span>
 		<input type="text" name="title" class="form-control" placeholder="Mein Konfigurationsmodul" autofocus="autofocus">
 	</div>
 		<hr>
@@ -21,6 +21,6 @@
 	{{/files}}
 	</table>
 	<div class="pull-right">
-		<button type="submit" class="btn btn-primary">Weiter &raquo;</button>
+		<button type="submit" class="btn btn-primary">{{lang_next}} &raquo;</button>
 	</div>
 </form>
