--- a/templates/sysconfig/start.html
+++ b/templates/sysconfig/start.html
@@ -1,9 +1,9 @@
-<p>Bitte wählen Sie aus, welche Art Konfigurationsmodul Sie erstellen möchten.</p>
+<p>{{lang_moduleChoose}}</p>
 
 {{#modules}}
 <div class="panel panel-default">
 	<div class="panel-heading">
-		{{title}} <a href="?do=SysConfig&amp;action=addmodule&amp;step={{startClass}}" class="pull-right btn btn-primary btn-xs"><span class="glyphicon glyphicon-plus"></span> Hinzufügen</a>
+		{{title}} <a href="?do=SysConfig&amp;action=addmodule&amp;step={{startClass}}" class="pull-right btn btn-primary btn-xs"><span class="glyphicon glyphicon-plus"></span> {{lang_add}}</a>
 	</div>
 	<div class="panel-body">
 		{{description}}
