--- a/templates/dialog-generic.html
+++ b/templates/dialog-generic.html
@@ -8,7 +8,7 @@
 				{{{body}}}
 			</div>
 			<div class="modal-footer">
-				{{#next}}<a class="btn btn-primary" href="{{next}}">{{nextD}} &raquo;</a>{{/next}}
+				{{#next}}<a class="btn btn-primary" href="{{next}}">{{lang_next}} &raquo;</a>{{/next}}
 			</div>
 		</div>
 	</div>
