--- a/templates/minilinux/filelist.html
+++ b/templates/minilinux/filelist.html
@@ -6,13 +6,12 @@
 		<div class="panel-body" id="download-{{id}}">
 			{{#systemChanged}}
 			<p>
-				Mindestens eine Komponente von <b>{{title}}</b> kann aktualisiert werden. Für einen reibungslosen Betrieb
-				wird empfohlen, alle Komponenten auf dem aktuellen Stand zu halten.
+				{{lang_canUpdate1}} <b>{{title}}</b> {{lang_canUpdate2}}
 			</p>
-			<p><span class="btn btn-primary" onclick="slxUpdateAll(this, 'download-{{id}}')">Aktualisieren</span></p>
+			<p><span class="btn btn-primary" onclick="slxUpdateAll(this, 'download-{{id}}')">{{lang_update}}</span></p>
 			{{/systemChanged}}
 			{{^systemChanged}}
-			<p>Das System ist auf dem aktuellen Stand.</p>
+			<p>{{lang_systemUpdated}}</p>
 			{{/systemChanged}}
 			<ul class="list-group">
 				{{#files}}
@@ -20,11 +19,11 @@
 					<div class="row">
 						<div class="col-sm-2">{{name}}</div>
 						<div class="col-xs-2">
-							{{^fileChanged}}<span class="glyphicon glyphicon-ok"></span> <b>Aktuell</b>{{/fileChanged}}
-							{{#fileChanged}}<span class="glyphicon glyphicon-exclamation-sign"></span> <b>Veraltet</b>{{/fileChanged}}
+							{{^fileChanged}}<span class="glyphicon glyphicon-ok"></span> <b>{{lang_actual}}</b>{{/fileChanged}}
+							{{#fileChanged}}<span class="glyphicon glyphicon-exclamation-sign"></span> <b>{{lang_outdated}}</b>{{/fileChanged}}
 						</div>
 						<div class="col-xs-2">
-							{{#fileChanged}}<span class="btn btn-primary btn-xs update-button" onclick="slxUpdate('{{uid}}', '{{id}}', '{{name}}')">Aktualisieren</span>{{/fileChanged}}
+							{{#fileChanged}}<span class="btn btn-primary btn-xs update-button" onclick="slxUpdate('{{uid}}', '{{id}}', '{{name}}')">{{lang_update}}</span>{{/fileChanged}}
 						</div>
 					</div>
 					{{{download}}}
@@ -35,7 +34,7 @@
 	</div>
 	{{/systems}}
 	{{^systems}}
-	<div class="row well well-sm">Keine Konfigurationspakete gefunden!</div>
+	<div class="row well well-sm">{{lang_configurationPackageNotFound}}</div>
 	{{/systems}}
 
 <script type="text/javascript">
