--- a/templates/page-adduser.html
+++ b/templates/page-adduser.html
@@ -1,28 +1,28 @@
 <div class="container">
 	<form class="form-adduser" action="?do=AddUser" method="post">
-		<h2 class="form-signin-heading">{{createUser}}</h2>
+		<h2 class="form-signin-heading">{{lang_createUser}}</h2>
 		<div class="row">
-			<div class="col-md-4">{{username}}</div>
-			<div class="col-md-4"><input type="text" name="user" value="{{user}}" class="form-control" placeholder="{{username}}" autofocus></div>
+			<div class="col-md-4">{{lang_username}}</div>
+			<div class="col-md-4"><input type="text" name="user" value="{{user}}" class="form-control" placeholder="{{lang_username}}" autofocus></div>
 		</div>
 		<div class="row">
-			<div class="col-md-4">{{password}}</div>
-			<div class="col-md-4"><input type="password" name="pass1" class="form-control" placeholder="{{password}}"></div>
-			<div class="col-md-4"><input type="password" name="pass2" class="form-control" placeholder="{{confirmation}}"></div>
+			<div class="col-md-4">{{lang_password}}</div>
+			<div class="col-md-4"><input type="password" name="pass1" class="form-control" placeholder="{{lang_password}}"></div>
+			<div class="col-md-4"><input type="password" name="pass2" class="form-control" placeholder="{{lang_confirmation}}"></div>
 		</div>
 		<div class="row">
-			<div class="col-md-4">{{fullName}}</div>
-			<div class="col-md-4"><input type="text" name="fullname" value="{{fullname}}" class="form-control" placeholder="{{fullName}}"></div>
+			<div class="col-md-4">{{lang_fullName}}</div>
+			<div class="col-md-4"><input type="text" name="fullname" value="{{fullname}}" class="form-control" placeholder="{{lang_fullName}}"></div>
 		</div>
 		<div class="row">
-			<div class="col-md-4">{{telephone}}</div>
-			<div class="col-md-4"><input type="text" name="phone" value="{{phone}}" class="form-control" placeholder="{{telephone}}"></div>
+			<div class="col-md-4">{{lang_telephone}}</div>
+			<div class="col-md-4"><input type="text" name="phone" value="{{phone}}" class="form-control" placeholder="{{lang_telephone}}"></div>
 		</div>
 		<div class="row">
 			<div class="col-md-4">E-Mail</div>
-			<div class="col-md-4"><input type="text" name="email" value="{{email}}" class="form-control" placeholder="Email"></div>
+			<div class="col-md-4"><input type="text" name="email" value="{{email}}" class="form-control" placeholder="E-Mail"></div>
 		</div>
-		<button class="btn btn-lg btn-primary btn-block" type="submit">{{createUser}}</button>
+		<button class="btn btn-lg btn-primary btn-block" type="submit">{{lang_createUser}}</button>
 		<input type="hidden" name="action" value="adduser">
 	</form>
 </div>
