--- a/templates/page-login.html
+++ b/templates/page-login.html
@@ -1,13 +1,13 @@
 <div class="container">
 	<form class="form-signin" action="?do=Session" method="post">
-		<h2 class="form-signin-heading">{{enter}}</h2>
-		<input type="text" name="user" class="form-control" placeholder="{{username}}" autofocus>
-		<input type="password" name="pass" class="form-control" placeholder="{{password}}">
+		<h2 class="form-signin-heading">{{lang_enter}}</h2>
+		<input type="text" name="user" class="form-control" placeholder="{{lang_username}}" autofocus>
+		<input type="password" name="pass" class="form-control" placeholder="{{lang_password}}">
 		<label class="checkbox">
-			<input type="checkbox" name="remember" value="remember-me"> {{rememberID}}
+			<input type="checkbox" name="remember" value="remember-me"> {{lang_rememberID}}
 		</label>
-		<button class="btn btn-lg btn-primary btn-block" type="submit">{{login}}</button>
-		<a class="btn btn-lg btn-primary btn-block" href="?do=AddUser">{{register}}</a>
+		<button class="btn btn-lg btn-primary btn-block" type="submit">{{lang_login}}</button>
+		<a class="btn btn-lg btn-primary btn-block" href="?do=AddUser">{{lang_register}}</a>
 		<input type="hidden" name="action" value="login">
 	</form>
 </div>
