--- a/templates/page-news.html
+++ b/templates/page-news.html
@@ -1,21 +1,21 @@
 <div class="container">
-	<p>Hier haben Sie die Möglichkeit, die von bwLehrpool-Clients angezeigten News zu editieren.</p>
+	<p>{{lang_newsIntro}}</p>
 	<div class="panel panel-default">
 		<div class="panel-heading">
-			{{activeNews}}
+			{{lang_activeNews}}
 		</div>
 		<div class="panel-body">
 			<form action="?do=News&amp;action=save" method="post">
 				<div class="form-group">
-					<label for="news-title-id">{{title}}</label>
+					<label for="news-title-id">{{lang_title}}</label>
 					<input type="text" name="news-title" id ="news-title-id" class="form-control" placeholder="{{welcome}}" value="{{latestTitle}}">
 				</div>
 				<div class="form-group">
-					<label for="news-content-id">{{content}}</label>
+					<label for="news-content-id">{{lang_content}}</label>
 					<textarea name="news-content" id ="news-content-id" class="form-control" rows="5" cols="30"  placeholder="">{{latestContent}}</textarea>
 				</div>
-				<p>{{latestUpdate}}: {{latestDate}}</p>
-				<button class="btn btn-primary btn-sm" type="submit">{{save}}</button>
+				<p>{{lang_latestUpdate}}: {{latestDate}}</p>
+				<button class="btn btn-primary btn-sm" type="submit">{{lang_save}}</button>
 				<input type="hidden" name="token" value="{{token}}">
 			</form>
 		</div>
@@ -23,7 +23,7 @@
 
 	<div class="panel panel-default">
 		<div class="panel-heading">
-			Alte News
+			{{lang_newsOld}}
 		</div>
 		<div class="panel-body">
 			<div class="table-responsive">
@@ -32,9 +32,9 @@
 					<table class="table table-stripped table-condensed">
 						<thead>
 							<tr>
-								<th>Datum</th>
-								<th>Titel</th>
-								<th>Inhalt</th>
+								<th>{{lang_date}}</th>
+								<th>{{lang_title}}</th>
+								<th>{{lang_content}}</th>
 								<th></th>
 							</tr>
 						</thead>
@@ -45,8 +45,8 @@
 								<td class="slx-ellipsis">{{title}}</td>
 								<td class="slx-ellipsis">{{content}}</td>
 								<td>
-									<a class="btn btn-primary btn-xs" href="?do=news&amp;newsid={{newsid}}&amp;action=show"><span class="glyphicon glyphicon-share-alt"></span> Verwenden</a>
-									<button class="btn btn-danger btn-xs" type="submit" name="newsid" value="{{newsid}}"><span class="glyphicon glyphicon-remove"></span> Löschen</button>
+									<a class="btn btn-primary btn-xs" href="?do=news&amp;newsid={{newsid}}&amp;action=show"><span class="glyphicon glyphicon-share-alt"></span> {{lang_show}}</a>
+									<button class="btn btn-danger btn-xs" type="submit" name="newsid" value="{{newsid}}"><span class="glyphicon glyphicon-remove"></span> {{lang_delete}}</button>
 								</td>
 							</tr>
 							{{/list}}
