--- a/templates/page-syslog.html
+++ b/templates/page-syslog.html
@@ -1,15 +1,15 @@
 <div class="container">
-	<h1>Client Log</h1>
+	<h1>{{lang_clientLog}}</h1>
 	<form method="post" action="?do=SysLog">
 		<input type="hidden" name="token" value="{{token}}">
 		<div class="input-group">
-			<span class="input-group-addon">Filter</span>
-			<input id="filterstring" type="text" placeholder="event-id" value="{{filter}}" name="filter" data-role="tagsinput" />
+			<span class="input-group-addon">{{lang_filter}}</span>
+			<input id="filterstring" type="text" placeholder="id" value="{{filter}}" name="filter" data-role="tagsinput" />
 			<span class="input-group-addon">
-				<input type="checkbox" name="not" {{#not}}checked="checked"{{/not}}> not
+				<input type="checkbox" name="not" {{#not}}checked="checked"{{/not}}> {{lang_not}}
 			</span>
 			<span class="input-group-btn">
-				<button class="btn btn-default" type="submit">Los</button>
+				<button class="btn btn-default" type="submit">{{lang_go}}</button>
 			</span>
 		</div>
 	</form>
@@ -17,10 +17,10 @@
 	<table class="table table-striped table-condensed">
 		<thead>
 			<th></th>
-			<th>Wann</th>
-			<th>Client</th>
-			<th>Ereignis</th>
-			<th>Details</th>
+			<th>{{lang_when}}</th>
+			<th>{{lang_client}}</th>
+			<th>{{lang_event}}</th>
+			<th>{{lang_details}}</th>
 		</thead>
 		<tbody>
 		{{#list}}
