--- a/templates/serversetup/ipaddress.html
+++ b/templates/serversetup/ipaddress.html
@@ -1,11 +1,11 @@
 <div class="container">
 	<div class="panel panel-default">
 		<div class="panel-heading">
-			Boot-Adresse des Servers
+			{{lang_bootAddress}}
 		</div>
 		<div class="panel-body">
 			<p>
-				Bitte wählen Sie die IP-Adresse, über die der Server von den Clients zum Booten angesprochen werden soll.
+				{{lang_chooseIP}}
 			</p>
 			<form method="post" action="?do=ServerSetup">
 				<input type="hidden" name="action" value="ip">
@@ -16,20 +16,19 @@
 						<td>{{ip}}</td>
 						{{#default}}
 						<td>
-							<span class="btn btn-success btn-xs"><span class="glyphicon glyphicon-ok"></span> Aktiv</span>
+							<span class="btn btn-success btn-xs"><span class="glyphicon glyphicon-ok"></span> {{lang_active}}</span>
 						</td>
 						{{/default}}
 						{{^default}}
 						<td>
-							<button class="btn btn-primary btn-xs" name="ip" value="{{ip}}"><span class="glyphicon glyphicon-flag"></span> Setzen</button>
+							<button class="btn btn-primary btn-xs" name="ip" value="{{ip}}"><span class="glyphicon glyphicon-flag"></span> {{lang_set}}</button>
 						</td>
 						{{/default}}
 					</tr>
 					{{/ips}}
 				</table>
 				<p>
-					Das Bootmenü muss nach einer Änderung der IP-Adresse neu generiert werden. In der Regel geschieht dies
-					automatisch, der Vorgang kann in der Sektion <b>Bootmenü</b> allerdings auch manuell ausgelöst werden.
+					{{lang_bootHint}}
 				</p>
 			</form>
 		</div>
